Fix carousel buttons being too big

--- a/css/style.css
+++ b/css/style.css
@@ -227,7 +227,7 @@ h3 {
   font-size: var(--step-2);
 }
 
-h4, .carousel-button, footer p {
+h4, footer p {
   font-size: var(--step-1);
 }
 
